# ComputerVisionFruits

./: README.md  fruit_ai_system-0.1.0-py3-none-any.whl  pyproject.toml
classifier_api/: __init__.py  inference.py  main.py  routes.py  schema.py
data/training/classifier/: dataset.py  train.py
data/training/detector/: dataset.py  train.py
database/: precios.json
deployment/: Dockerfile.classifier  Dockerfile.detector  docker-compose.yml  requirements.classifier.txt  requirements.detector.txt  requirements.training.txt
detector_agent/: __init__.py  client.py  cropper.py  detection_analyzer.py  detector.py  logger_config.py  main.py  tracker.py  visualizer.py
shared/: config.py
