# pyproject.toml — hace que 'shared' sea importable desde la raiz del proyecto
# Ejecutar: pip install -e . (en desarrollo) o PYTHONPATH=. python ...

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fruit-ai-system"
version = "0.1.0"
description = "Sistema multi-agente deteccion y clasificacion de frutas"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "classifier_api*", "detector_agent*", "data*"]

[tool.setuptools]
py-modules = []
